--- a/src/app/admin-home/components/news/see-post-info/see-post-info.component.html
+++ b/src/app/admin-home/components/news/see-post-info/see-post-info.component.html
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div [ngClass]="{'editState':editState.post}">
-                        <form *ngIf="editForm" [formGroup]="editForm" (ngSubmit)="onSubmit()">
+                        <form *ngIf="postData._id" #o="ngForm" (ngSubmit)="onSubmit()">
                             <ul class="list-group">
                                 <li class="list-group-item  panel-heading">
                                     <div class="row">
@@ -18,17 +18,33 @@
                                 </li>
 
                                 <li class="list-group-item"><label>articleHeadline</label>
-                                    <span class="readContent">{{editForm.value.articleHeadline}}</span>
-                                    <input type="text" class="form-control" formControlName="articleHeadline" />
+                                    <span class="readContent">{{postData.articleHeadline}}</span>
+                                    <input type="text" class="form-control" name="articleHeadline" [(ngModel)]="postData.articleHeadline" [ngModelOptions]="{updateOn:'submit'}"/>
                                 </li>
                                 <li class="list-group-item"><label>location Code</label>
-                                    <span class="readContent">{{editForm.value.locationCode}}</span>
-                                    <input type="text" class="form-control" formControlName="locationCode" />
+                                    <span class="readContent">{{postData.locationCode}}</span>
+                                    <input type="text" class="form-control" name="locationCode" [(ngModel)]="postData.locationCode" [ngModelOptions]="{updateOn:'submit'}"/>
                                 </li>
-                                <!-- <li class="list-group-item"><label>Text</label>
-                                    <span class="readContent">{{editForm.value.text}}</span>
-                                    <textarea  class="input" class="form-control" formControlName="text"></textarea>
-                                </li> -->
+                                <li class="list-group-item"><label>Text</label>
+                                    <span class="readContent">{{postData.text}}</span>
+                                    <textarea  class="input" class="form-control" name="text" [(ngModel)]="postData.modifiedText"></textarea>
+                                </li>
+                                <li class="list-group-item"><label>reading Time</label>
+                                    <span class="readContent">{{postData.readingTime}}</span>
+                                    <input type="text" onkeypress="return (event.charCode !=8 && event.charCode ==0 || (event.charCode >= 48 && event.charCode <= 57))" class="form-control" name="readingTime" [(ngModel)]="postData.readingTime" [ngModelOptions]="{updateOn:'submit'}"/>
+                                </li>
+                                <li class="list-group-item"><label>Approved</label>
+                                    <span style='font-size: 25px'
+                                        [ngClass]="{'glyphicon-ok-circle' : postData.approved, 'glyphicon-remove-circle':!postData.approved }"
+                                        class='glyphicon readContent'></span>
+                                    <mat-checkbox class="example-margin" name="approved" [(ngModel)]="postData.approved" [ngModelOptions]="{updateOn:'submit'}"></mat-checkbox>
+                                </li>
+                                <li class="list-group-item"><label>Featured</label>
+                                    <span style='font-size: 25px'
+                                        [ngClass]="{'glyphicon-ok-circle' : postData.featured, 'glyphicon-remove-circle':!postData.featured }"
+                                        class='glyphicon readContent'></span>
+                                    <mat-checkbox class="example-margin" name="featured" [(ngModel)]="postData.featured" [ngModelOptions]="{updateOn:'submit'}"></mat-checkbox>
+                                </li>
                                 <li class="list-group-item editBtns">
                                     <div class="row">
                                         <div class="col-md-12">
