--- a/src/app/admin-home/components/properties/view-edit-ref-data/view-edit-ref-data.component.html
+++ b/src/app/admin-home/components/properties/view-edit-ref-data/view-edit-ref-data.component.html
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <div [ngClass]="{'editState':editState.refData}">
-                        <form *ngIf="firstFormGroup" [formGroup]="firstFormGroup" (ngSubmit)="onSubmit('refData')">
+                        <form *ngIf="refDataParams._id" #f1="ngForm" (ngSubmit)="onSubmit('refData')">
                             <ul class="list-group">
                                 <li class="list-group-item  panel-heading">
                                     <div class="row">
@@ -18,18 +18,16 @@
                                 </li>
 
                                 <li class="list-group-item"><label>Country</label>
-                                    <span class="readContent">{{firstFormGroup.value.country}}</span>
-                                    <input type="text" class="form-control" formControlName="country" />
+                                    <span class="readContent">{{refDataParams.country}}</span>
+                                    <input type="text" class="form-control" name="country" [(ngModel)]="refDataParams.country" [ngModelOptions]="{updateOn:'submit'}"/>
                                 </li>
                                 <li class="list-group-item"><label>Currency Code</label>
-                                    <span class="readContent">{{firstFormGroup.value.currencyCode}}</span>
-                                    <input type="text" class="form-control" formControlName="currencyCode" />
+                                    <span class="readContent">{{refDataParams.currencyCode}}</span>
+                                    <input type="text" class="form-control" name="currencyCode" [(ngModel)]="refDataParams.currencyCode" [ngModelOptions]="{updateOn:'submit'}"/>
                                 </li>
                                 <li class="list-group-item"><label>Rent Period </label>
-                                    <span class="readContent">{{periodArr}}</span>
-                                    <app-chips *ngIf="editState.refData" [stringInput]="true" formControlName="rentPeriod"></app-chips>
-
-                                    <!-- <input type="text" class="form-control" formControlName="rentPeriod" /> -->
+                                    <span class="readContent">{{refDataParams.rentPeriod}}</span>
+                                    <app-chips *ngIf="editState.refData" [stringInput]="true" name="rentPeriod" [(ngModel)]="refDataParams.rentPeriodModified" [ngModelOptions]="{updateOn:'submit'}"></app-chips>
                                 </li>
                                 <li class="list-group-item editBtns">
                                     <div class="row">
@@ -44,47 +42,47 @@
                         </form>
                     </div>
                     
-<div [ngClass]="{'editState':editState.priceList}">
-    <form *ngIf="thirdFormGroup" [formGroup]="thirdFormGroup">
-        <ul class="list-group">
-            <li class="list-group-item  panel-heading">
-                <div class="row">
-                    <div class="col-md-12">
-                        <h5><i></i>priceList</h5>
-                        <a class="glyphicon glyphicon-pencil btn btn-primary pull-right"
-                            (click)="editState.priceList = !editState.priceList"></a>
+                    <div [ngClass]="{'editState':editState.priceList}">
+                        <form *ngIf="priceListParams._id" #f2="ngForm">
+                            <ul class="list-group">
+                                <li class="list-group-item  panel-heading">
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <h5><i></i>priceList</h5>
+                                            <a class="glyphicon glyphicon-pencil btn btn-primary pull-right"
+                                                (click)="editState.priceList = !editState.priceList"></a>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li  class="list-group-item"><label>Rent Range</label>
+                                    <select>
+                                        <option>Rent Range</option>
+                                        <option *ngFor="let range of priceListParams.rentRange">{{range}}</option>
+                                    </select>
+                                    <app-chips *ngIf="editState.priceList" name="rentRangeModified" [(ngModel)]="priceListParams.rentRangeModified" [ngModelOptions]="{updateOn:'submit'}"></app-chips>
+                                </li>
+                                <li  class="list-group-item"><label>Sale Range</label>
+                                    <select>
+                                        <option>Sale Range</option>
+                                    <option *ngFor="let range of priceListParams.saleRange">{{range}}</option>
+                                </select>
+                                    <app-chips *ngIf="editState.priceList" name="saleRangeModified" [(ngModel)]="priceListParams.saleRangeModified" [ngModelOptions]="{updateOn:'submit'}"></app-chips>
+                                </li>
+                                <li class="list-group-item editBtns">
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <button (click)="editState.priceList = !editState.priceList"
+                                            class="btn btn-default pull-left" class="btn btn-default pull-left">Cancel</button>
+                                            <button (click)="onSubmit('priceList')" type="submit" class="btn btn-primary pull-right">Save</button>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
+                        </form>
                     </div>
-                </div>
-            </li>
-            <li  class="list-group-item"><label>Rent Range</label>
-                <input type="text" formControlName="rentRange"/>
-                <select>
-                     <option>Rent Range</option>
-                     <option *ngFor="let range of thirdFormGroup.value.rentRange">{{range}}</option>
-                </select>
-                <app-chips *ngIf="editState.priceList" formControlName="rentRange"></app-chips>
-            </li>
-            <li  class="list-group-item"><label>Sale Range</label>
-                <select>
-                    <option>Sale Range</option>
-                   <option *ngFor="let range of thirdFormGroup.value.saleRange">{{range}}</option>
-               </select>
-                <app-chips *ngIf="editState.priceList" formControlName="saleRange"></app-chips>
-            </li>
-            <li class="list-group-item editBtns">
-                <div class="row">
-                    <div class="col-md-12">
-                        <button (click)="cancel('')" class="btn btn-default pull-left">Cancel</button>
-                        <button (click)="onSubmit('priceList')" type="submit" class="btn btn-primary pull-right">Save</button>
-                    </div>
-                </div>
-            </li>
-        </ul>
-    </form>
-</div>
                 </div>
                 <div class="col-md-6">
-                    <form *ngIf="secondFormGroup" [formGroup]="secondFormGroup" (ngSubmit)="onSubmit('local')"
+                    <form *ngIf="localParams._id" #f2="ngForm" (ngSubmit)="onSubmit('local')"
                         [ngClass]="{'editState':editState.local}">
                         <ul class="list-group">
                             <li class="list-group-item  panel-heading">
@@ -97,34 +95,34 @@
                                 </div>
                             </li>
                             <li class="list-group-item"><label>Local</label>
-                                <span class="readContent">{{secondFormGroup.value.local}}</span>
-                                <input type="text" class="form-control" formControlName="local" />
+                                <span class="readContent">{{localParams.local}}</span>
+                                <input type="text" class="form-control" name="local" [(ngModel)]="localParams.local" [ngModelOptions]="{updateOn:'submit'}" />
                             </li>
                             <li class="list-group-item"><label>description</label>
-                                <span class="readContent">{{secondFormGroup.value.description}}</span>
-                                <input type="text" class="form-control" formControlName="description" />
+                                <span class="readContent">{{localParams.description}}</span>
+                                <input type="text" class="form-control" name="description" [(ngModel)]="localParams.description" [ngModelOptions]="{updateOn:'submit'}" />
                             </li>
                             <li class="list-group-item"><label>Short Date Format</label>
-                                <span class="readContent">{{secondFormGroup.value.shortDateFormat}}</span>
-                                <input type="text" class="form-control" formControlName="shortDateFormat" />
+                                <span class="readContent">{{localParams.shortDateFormat}}</span>
+                                <input type="text" class="form-control" name="shortDateFormat" [(ngModel)]="localParams.shortDateFormat" [ngModelOptions]="{updateOn:'submit'}" />
                             </li>
                             <li class="list-group-item"><label>long Date Format</label>
-                                <span class="readContent">{{secondFormGroup.value.longDateFormat}}</span>
-                                <input type="text" class="form-control" formControlName="longDateFormat" />
+                                <span class="readContent">{{localParams.longDateFormat}}</span>
+                                <input type="text" class="form-control" name="longDateFormat" [(ngModel)]="localParams.longDateFormat" [ngModelOptions]="{updateOn:'submit'}" />
                             </li>
                             <li class="list-group-item"><label>Time Format</label>
-                                <span class="readContent">{{secondFormGroup.value.timeFormat}}</span>
-                                <input type="text" class="form-control" formControlName="timeFormat" />
+                                <span class="readContent">{{localParams.timeFormat}}</span>
+                                <input type="text" class="form-control" name="timeFormat" [(ngModel)]="localParams.timeFormat" [ngModelOptions]="{updateOn:'submit'}" />
                             </li>
                             <li class="list-group-item"><label>Decimal Format</label>
-                                <span class="readContent">{{secondFormGroup.value.decimalFormat}}</span>
-                                <input type="text" class="form-control" formControlName="decimalFormat" />
+                                <span class="readContent">{{localParams.decimalFormat}}</span>
+                                <input type="text" class="form-control" name="decimalFormat" [(ngModel)]="localParams.decimalFormat" [ngModelOptions]="{updateOn:'submit'}" />
                             </li>
                             <li class="list-group-item"><label>system Default</label>
                                 <span style='font-size: 25px'
-                                    [ngClass]="{'glyphicon-ok-circle' : secondFormGroup.value.systemDefault, 'glyphicon-remove-circle':!secondFormGroup.value.systemDefault }"
+                                    [ngClass]="{'glyphicon-ok-circle' : localParams.systemDefault, 'glyphicon-remove-circle':!localParams.systemDefault }"
                                     class='glyphicon readContent'></span>
-                                <mat-checkbox class="example-margin" formControlName="systemDefault"></mat-checkbox>
+                                <mat-checkbox class="example-margin" name="systemDefault" [(ngModel)]="localParams.systemDefault" [ngModelOptions]="{updateOn:'submit'}"></mat-checkbox>
                             </li>
                             <li class="list-group-item editBtns">
                                 <div class="row">
