adding editing image option

--- a/src/app/admin-home/components/news/news.component.html
+++ b/src/app/admin-home/components/news/news.component.html
@@ -15,6 +15,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
+                        <button class="btn btn-default" (click)="addPost()">{{'ADD_POST' | translate}}</button>
                         <button type="submit" class="button btn btn-primary pull-right">{{'SEARCH' | translate}}</button>
                     </div>
                 </div>
