--- a/src/app/admin-home/components/news/see-post-info/see-post-info.component.html
+++ b/src/app/admin-home/components/news/see-post-info/see-post-info.component.html
@@ -31,7 +31,7 @@
                                 </li>
                                 <li class="list-group-item"><label>Text</label>
                                     <span class="readContent">{{postData.text}}</span>
-                                    <textarea style = "width:100%" class="input" class="form-control" name="text" [(ngModel)]="postData.modifiedText"></textarea>
+                                    <textarea style = "height:700px" class="input" class="form-control" name="text" [(ngModel)]="postData.modifiedText"></textarea>
                                 </li>
                                 <li class="list-group-item"><label>reading Time</label>
                                     <span class="readContent">{{postData.readingTime}}</span>
