--- a/src/app/admin-home/news/create-post/create-post.component.html
+++ b/src/app/admin-home/news/create-post/create-post.component.html
@@ -19,8 +19,18 @@
                     </div>
                     <div class="row">
                         <div class="form-group col-md-4 required">
+                            <label class="control-label">Article Snippet</label>
+                            <input type="text" name="articleSnippet" formControlName="articleSnippet" class="form-control"/>
+                            <div *ngIf="(firstFormGroup.controls.articleSnippet.touched) && firstFormGroup.controls.articleSnippet.errors">
+                            <span *ngIf="firstFormGroup.controls.articleSnippet.invalid" class="msg-error">Error</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="form-group col-md-4 required">
                             <label class="control-label">text</label>
-                            <input  type="text" formControlName="text" class="form-control"/>
+                            <!-- <input  type="text" formControlName="text" class="form-control"/> -->
+                            <textarea style = "height:500px" class="input" class="form-control" name="text" formControlName="text"></textarea>
                             <div *ngIf="(firstFormGroup.controls.text.touched) && firstFormGroup.controls.text.errors">
                             <span *ngIf="firstFormGroup.controls.text.invalid" class="msg-error">Error</span>
                             </div>
@@ -94,4 +104,5 @@
         </div>
        </div>
     </div>
+    <button type="button" class="btn btn-default pull-left" (click)="backButton()">{{'CANCEL' | translate}}</button>
 </div>
