--- a/src/app/admin-home/components/navpill/navpill.component.html
+++ b/src/app/admin-home/components/navpill/navpill.component.html
@@ -12,4 +12,7 @@
   <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
     <a class="nav-link" routerLink="/admin/propertyNews" >{{'ADMIN_NEWS' | translate}}</a>
   </li>
+  <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+    <a class="nav-link" routerLink="/admin/towns" >{{'ADMIN_TOWNS' | translate}}</a>
+  </li>
 </ul>
